[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["test_kwandl.py"]

[tool.coverage.run]
branch = true
source = ["kwandl.*"]
command_line = "-m pytest"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37,py38,py39
skip_missing_interpreters = true
[testenv]
commands = pytest
extras = dev
"""
